fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ nav {
   letter-spacing: .2rem;
   text-align: center;
   transition: translate 0.6s ease-out;
+  overflow: hidden;
 }
 
 .navBar {
